// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tracking Domains Create Form should render correctly when submitting is false 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Stack>
        <Field
          component={[Function]}
          disabled={false}
          label="Domain Name"
          name="domain"
          validate={
            Array [
              [Function],
            ]
          }
        />
        <Field
          component={[Function]}
          disabled={false}
          helpText="Leaving this field blank will permanently assign the tracking domain to the master account."
          name="subaccount"
        />
      </Stack>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={false}
        submit={true}
        variant="primary"
      >
        Add Tracking Domain
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`Component: Tracking Domains Create Form should render correctly when submitting is true 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Stack>
        <Field
          component={[Function]}
          disabled={true}
          label="Domain Name"
          name="domain"
          validate={
            Array [
              [Function],
            ]
          }
        />
        <Field
          component={[Function]}
          disabled={true}
          helpText="Leaving this field blank will permanently assign the tracking domain to the master account."
          name="subaccount"
        />
      </Stack>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Submitting...
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;
